# flexgen

./: .gitignore  Cargo.toml  README.md
doc_test/: Cargo.toml  README.md
doc_test/src/: lib.rs
examples/: basic.rs
examples/basic/: fib.rs  flexgen.toml  main.rs
flexgen/: Cargo.toml
flexgen/examples/basic/: fib.rs  flexgen.toml  main.rs
flexgen/src/: config.rs  lib.rs  var.rs
rust_format/: Cargo.toml  README.md
rust_format/src/: lib.rs  replace.rs
src/: config.rs  lib.rs  var.rs
use_builder/: Cargo.toml  README.md
use_builder/src/: lib.rs
