[package]
name = "flexgen"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible, yet simple quote-based code generator for Rust"
repository = "https://github.com/nu11ptr/flexgen"
documentation = "https://docs.rs/flexgen"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1"
flexstr = { version = "0.9", features = ["serde"] }
proc-macro2 = "1"
quote = "1"
quote-doctest = { path = "doc_test"}
serde = {version = "1", features = ["derive"]}
syn = "1"
thiserror = "1"
toml = "0.5"

[dev-dependencies]
pretty_assertions = "1"
