[package]
name = "flexgen"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible, yet simple quote-based code generator for Rust"
repository = "https://github.com/nu11ptr/flexgen"
documentation = "https://docs.rs/flexgen"
readme = "README.md"
edition = "2021"

[dependencies]
flexstr = { version = "0.9", features = ["serde"] }
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.5"
rust-format = { version = "0.3.2", features = ["post_process", "pretty_please", "token_stream"] }
serde = { version = "1", features = ["derive"] }
syn = "1.0"
thiserror = "1.0"
toml = { version = "0.5", features = ["preserve_order"] }

[dev-dependencies]
pretty_assertions = "1"
quote-doctest = "0.3.1"

[workspace]
members = ["doc_test", "rust_format"]
