[package]
name = "flexgen"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible, yet simple quote-based code generator for Rust"
repository = "https://github.com/nu11ptr/flexgen"
documentation = "https://docs.rs/flexgen"
readme = "README.md"
edition = "2021"

[workspace]
members = ["doc_test", "rust_format"]

[dependencies]
flexstr = { version = "0.9", features = ["serde"] }
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.5"
rust-format = { version = "0.3.4", features = ["post_process", "pretty_please", "token_stream"] }
serde = { version = "1", features = ["derive"] }
syn = { version = "1.0", default-features = false, features = ["clone-impls", "extra-traits", "parsing", "printing"] }
thiserror = "1.0"
toml = "0.5"

[dev-dependencies]
pretty_assertions = "1"
quote-doctest = "0.3.2"
