[package]
name = "quote-doctest"
version = "0.2.2"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple doctest generator for quote"
repository = "https://github.com/nu11ptr/flexgen/tree/master/doc_test"
documentation = "https://docs.rs/quote-doctest"
keywords = ["syn", "macros", "quote", "doctest"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
edition = "2021"

[features]
default = ["prettyplease"]

[dependencies]
prettyplease = { version = "0.1", optional = true }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", default-features = false, features = [ "full", "parsing", "printing" ] }

[dev-dependencies]
temp-env = "0.2"
