[package]
name = "quote-doctest"
version = "0.3.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple doctest generator for quote"
repository = "https://github.com/nu11ptr/flexgen/tree/master/doc_test"
documentation = "https://docs.rs/quote-doctest"
keywords = ["syn", "macros", "quote", "doctest"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["pretty_please"]
pretty_please = ["rust-format/pretty_please"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
rust-format = { version = "0.3", features = ["post_process", "token_stream"] }

[dev-dependencies]
pretty_assertions = "1.2"
