[package]
name = "rust-format"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust source code formatting crate with a unified interface for string, file, and TokenStream input"
repository = "https://github.com/nu11ptr/flexgen/tree/master/rust_format"
documentation = "https://docs.rs/rust-format"
keywords = []
categories = []
readme = "README.md"
edition = "2021"

[dependencies]
