[package]
name = "rust-format"
version = "0.2.1"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust source code formatting crate with a unified interface for string, file, and TokenStream input"
repository = "https://github.com/nu11ptr/flexgen/tree/master/rust_format"
documentation = "https://docs.rs/rust-format"
keywords = ["rustfmt", "prettyplease", "formatter", "quote"]
categories = ["development-tools", "value-formatting"]
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[features]
pretty_please = ["prettyplease", "syn", "token_stream"]
token_stream = ["proc-macro2"]

[dependencies]
prettyplease = { version = "0.1", optional = true }
proc-macro2 = { version = "1.0", optional = true }
syn = { version = "1.0", default-features = false, features = ["full", "parsing"], optional = true }

[dev-dependencies]
quote = "1.0"
temp-env = "0.2"
tempfile = "3.3"
