[package]
name = "use-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "1.8"
quote = { version = "1.0", default-features = false }
syn = { version = "1.0", default-features = false, features = [ "clone-impls", "extra-traits", "full", "parsing", "printing" ] }

[dev-dependencies]
assert_unordered = "0.3.3"
