[package]
name = "use-builder"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A crate to build source code use sections by combining multiple (possibly duplicate) use section inputs"
repository = "https://github.com/nu11ptr/flexgen/tree/master/use_builder"
documentation = "https://docs.rs/use-builder"
keywords = ["quote", "syn", "use"]
categories = ["development-tools", "value-formatting"]
readme = "README.md"
edition = "2021"

[dependencies]
indexmap = "1.8"
quote = { version = "1.0", default-features = false }
syn = { version = "1.0", default-features = false, features = [ "clone-impls", "extra-traits", "full", "parsing", "printing" ] }

[dev-dependencies]
assert_unordered = "0.3.3"
